change a colorful default photo to prevent dark mode too dark

--- a/code/wordle_war/src/index.css
+++ b/code/wordle_war/src/index.css
@@ -206,7 +206,7 @@ a:visited {
 }
 
 .profile img{
-  width: 50%;
+  width: 40%;
   margin: auto;
 }
 
